clang/test/BSC/Positive/Method/Struct/struct_typedef_instance_function_call/struct_typedef_instance_function_call.cbs
// RUN: %clang %s -o %t.output
// RUN: %t.output
// expected-no-diagnostics

typedef struct _queue {
} queue;

void queue::empty(queue *this) {
}

int main() {
    queue q;
    q.empty();
    return 0;
}