clang/test/BSC/Negative/Driver/options/nullability-check-equals-none/nullability-check-equals-none.cbs
// RUN: %clang -nullability-check=none %s -o %t.output
// RUN: %t.output

safe int main(void) {
    int *borrow _Nonnull p1 = nullptr;
    return 0;
}